--- a/src/css/index.module.css
+++ b/src/css/index.module.css
@@ -13,6 +13,11 @@ a, a:link, a:visited  {
   text-decoration: none;
 }
 
+span,div {
+  cursor: default;
+}
+
+
 a:hover  {
   text-decoration: none;
 }
@@ -97,7 +102,7 @@ header{
 .lab {
   margin-top: 25px;
   width: 1920px;
-  background-image: url("./img/lab.png");
+  background-image: url("../img/lab.png");
   height: 560px;
   position: relative;
   left: 50%;
@@ -382,6 +387,7 @@ header{
 }
 
 .formbuttontext{
+  cursor: pointer;
   font-size: 21px;
   font-weight: 400;
   line-height: 29.4px;
@@ -410,4 +416,30 @@ header{
 .logowhite{
   margin-left: auto; 
   margin-right: 0;
+}
+
+.thanksbox{
+  position: absolute;
+  text-align: center;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(to bottom, #F5F5FF, #E9EAF9);
+}
+
+.thankscont {
+  margin-top: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.thankstext{
+  width: 600px;
+  height: 68px;
+  color: #737BE1;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 33.6px;
+  text-align: left;
 }
