--- a/src/css/index.module.css
+++ b/src/css/index.module.css
@@ -17,10 +17,13 @@ span,div {
   cursor: default;
 }
 
-
 a:hover  {
   text-decoration: none;
 }
+.flex {
+  display: flex;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
@@ -33,10 +36,6 @@ body {
     width: 1400px;
     margin: 0 auto;
     position: relative;
-}
-
-.flex {
-  display: flex;
 }
 
 header{
@@ -113,6 +112,10 @@ header{
     width: 1400px;
 }
 
+.himkapimob{
+  display: none;
+}
+
 .infolab {
   position: absolute;
   top: 210px;
@@ -153,6 +156,10 @@ header{
 
 .smartkapi {
   margin: 68px 0 0 1168px;
+}
+
+.smartkapimob{
+  display: none;
 }
 
 .welcomesection{
@@ -442,4 +449,206 @@ header{
   font-weight: 600;
   line-height: 33.6px;
   text-align: left;
+}
+@media only screen and (max-width: 480px){
+  .navbox,.tell,.telltext,.gal5,.gal6,.gal7,.smartkapi,.himkapi{
+    display: none;
+  }
+  .block{
+    display: block;
+  }
+
+  body{
+    width: 480px;
+  }
+
+  .center{
+    width: 324px;
+  }
+
+  .logoname{
+    width: 194px;
+    width: 29px;
+  }
+
+  .diagnostics{
+    margin: 40px 0 0 -30px;
+    width: 237px;
+    height: 16px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15.6px;
+    text-align: left;
+  }
+
+  .phonbox{
+    text-align: right;
+  }
+
+  .lab{
+    background-image: url("../img/mob/labmob.png");
+    width: 360px;
+    height: 243.2px;
+  }
+
+  .infolab{
+    margin: 0px 0 0 -240px;
+    width: 118px;
+    height: 90px;
+  }
+
+  .boxlabone{
+    width: 286px;
+    height: 45px;
+  }
+
+  .boxlabtwo{
+    background-color: #E9EAF9;
+    width: 221px;
+    height: 45px;
+  }
+
+  .textlabone{
+    padding: 0;
+    margin: 0;
+    width: 264px;
+    height: 29px;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29.26px;
+    text-align: left;
+  }
+
+  .textlabtwo{
+    padding: 0;
+    margin: 0;
+    width: 197px;
+    height: 29px;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29.26px;
+    text-align: left;
+  }
+
+  .smartkapimob{
+    margin: 15px 0 0 95px;
+    display: block;
+  }
+
+  .welcometext{
+    margin-top: 150px;
+    width: 324px;
+    height: 175px;
+    font-size: 18px;
+    font-family: Montserrat;
+    font-style: italic;
+    font-weight: 600;
+    line-height: 25.2px;
+    text-align: center;
+  }
+  .gradient{
+    display: block;
+    background: linear-gradient(to bottom, #F5F5FF, #E9EAF9);
+    margin-top: 1px;
+    margin-left: -1px;
+    width: 480px;
+    height: 950px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .labinfo{
+    margin-left: 16%;
+  }
+  .labheading{
+    margin-top: 60px;
+  }
+  .himkapimob{
+    display: block;
+  }
+  .labtextone{
+    width: 336px;
+    height: 250px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25.2px;
+    text-align: left;
+  }
+  .labtexttwo{
+    width: 336px;
+    height: 100px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25.2px;
+    text-align: left;
+  }
+  .gal{
+    margin-top: 1000px;
+  }
+  .gal1,.gal2,.gal3,.gal4{
+    width: 324px;
+    height: 243px;
+    border-radius: 3.77px;
+  }
+  .gal2,.gal3,.gal4{
+    margin: 24px 0 0  -1px;
+  }
+
+  .form{
+    margin-left: -36px;
+    width: 360px;
+    height: 607px;
+    padding: 36px 18px 36px 18px;
+  }
+  
+  .formhead{
+    width: 324px;
+    height: 68px;
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 34.13px;
+    text-align: left;
+  }
+
+  .forminfo{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25.2px;
+    text-align: left;
+    width: 324px;
+    height: 125px;
+  }
+
+
+  .forminput{
+    margin-bottom: 19px;
+  }
+
+  .formbutton{
+    margin: auto ;
+  }
+  .footertextmob{
+    margin: auto;
+    width: 360px;
+    padding: 24px 18px 24px 18px;
+  }
+
+  .logowhite{
+    margin-top: -110px;
+  }
+
+  .thanksbox{
+    width: 100%;
+    height: 100%;
+  }
+
+  .logook{
+    position: absolute;
+    top: 40px;
+  }
+
+  .thankstext{
+    margin-top: 40px;
+    text-align: center;
+  }
 }
